--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -30,11 +30,15 @@
 
 .scrollDown {
   padding: 20px;
-  font-size: 18px;
+  font-size: 1.5rem;
   color: #888;
   text-align: center;
   cursor: pointer;
   animation: bounce 2s infinite;
+}
+
+.scrollDown svg {
+  transform: translateY(3px);
 }
 
 @keyframes bounce {
