--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -9,8 +9,8 @@
 }
 
 .hero {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
