--- a/src/components/EpisodeSelector/swiper.module.css
+++ b/src/components/EpisodeSelector/swiper.module.css
@@ -4,7 +4,18 @@
   margin: 0 auto;
 }
 
-.swiper {
+/* .swiper {
   width: 100%;
   height: 100%;
+} */
+
+.carouselContainer {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 3s ease, transform 3s ease;
+}
+
+.fadeIn {
+  opacity: 1;
+  transform: translateY(0);
 }
