--- a/src/components/EpisodeSelector/slide.module.css
+++ b/src/components/EpisodeSelector/slide.module.css
@@ -16,11 +16,31 @@
   background-color: #fece02;
 }
 
+.play {
+  color: #fece02;
+  border: none;
+  background: none;
+  transition: opacity 1s ease; /* Transition for fading in/out */
+  position: absolute;
+  top: 60px;
+  left: 45%;
+  transform: translateX(-50%);
+  cursor: pointer;
+  opacity: 0;
+}
+
+.play svg path:first-of-type {
+  fill: black;
+  opacity: 0.8;
+}
 :global(.swiper-slide) {
   filter: blur(1px);
 }
 :global(.swiper-slide-active) {
   filter: blur(0px);
+}
+:global(.swiper-slide-active) .play {
+  opacity: 1;
 }
 
 .cardText {
