--- a/src/components/EpisodeSelector/slide.module.css
+++ b/src/components/EpisodeSelector/slide.module.css
@@ -1,5 +1,5 @@
 .card {
-  /* margin: 0 30px; */
+  position: relative;
   height: 500px;
   width: 260px;
   background-color: black;
@@ -8,7 +8,7 @@
   /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); */
 }
 
-.image {
+.imageContainer {
   position: relative;
   width: 100%;
   border-bottom: 5px solid #fece02;
@@ -16,17 +16,32 @@
   background-color: #fece02;
 }
 
+.image {
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  left: 0;
+  border-bottom: 5px solid #fece02;
+}
+
 .play {
   color: #fece02;
   border: none;
   background: none;
-  transition: opacity 1s ease; /* Transition for fading in/out */
+  transition: opacity 0.5s ease; /* Transition for fading in/out */
   position: absolute;
-  top: 60px;
-  left: 45%;
-  transform: translateX(-50%);
+  top: 45px;
+  left: 50%;
+  transform: translateX(-50%) translateX(-10px);
   cursor: pointer;
   opacity: 0;
+}
+
+.play svg {
+  transition: fill 0.5s ease;
+}
+.play:hover svg {
+  fill: #fe8802;
 }
 
 .play svg path:first-of-type {
