--- a/src/components/Media/media.module.css
+++ b/src/components/Media/media.module.css
@@ -174,20 +174,20 @@ main div {
 }
 
 .carousel {
-  height: 750px;
+  height: 680px;
 }
 
 .about h1 {
   font-size: 4rem;
+  margin-bottom: 0;
 }
 
 .genreSelector {
-  padding: 0rem 10rem;
   text-align: center;
   display: flex;
   justify-content: center;
-  margin-bottom: 100px;
   row-gap: 20px;
+  padding-bottom: 5rem;
 }
 
 .genreSelector button {
@@ -217,9 +217,6 @@ main div {
 }
 
 @media only screen and (max-width: 1366px) {
-  .genreSelector {
-    padding: 0rem 5rem;
-  }
   .about {
     padding: 3rem 5rem;
   }
@@ -233,9 +230,6 @@ main div {
 }
 
 @media only screen and (max-width: 768px) {
-  .genreSelector {
-    padding: 0rem 2rem;
-  }
   .about {
     padding: 2rem 3rem;
   }
