--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -1,13 +1,3 @@
-/* Hero.module.css */
-:root {
-  --bg: #000;
-  --clr-1: #00c2ff;
-  --clr-2: #33ff8c;
-  --clr-3: #fece02;
-  --clr-4: #e54cff;
-  --blur: 0.5rem;
-}
-
 .hero {
   width: 100dvw;
   height: 100dvh;
@@ -57,7 +47,7 @@
   letter-spacing: clamp(-1.75px, -0.25vw, -3.5px);
   position: relative;
   overflow: hidden;
-  background: var(--bg);
+  background: #000;
   margin: 0;
   font-family: "Monoton";
   word-spacing: 1rem;
@@ -80,9 +70,9 @@
   position: absolute;
   width: 60vw;
   height: 60vw;
-  background-color: var(--clr-1);
+  background-color: var(--yellow);
   border-radius: 37% 29% 27% 27% / 28% 25% 41% 37%;
-  filter: blur(var(--blur));
+  filter: blur(0.5);
   mix-blend-mode: overlay;
 }
 
@@ -93,7 +83,7 @@
 }
 
 .aurora__item:nth-of-type(2) {
-  background-color: var(--clr-3);
+  background-color: var(--orange);
   right: 0;
   top: 0;
   animation: aurora-border 6s ease-in-out infinite,
@@ -101,7 +91,7 @@
 }
 
 .aurora__item:nth-of-type(3) {
-  background-color: var(--clr-2);
+  background-color: var(--blue);
   left: 0;
   bottom: 0;
   animation: aurora-border 6s ease-in-out infinite,
@@ -109,7 +99,7 @@
 }
 
 .aurora__item:nth-of-type(4) {
-  background-color: var(--clr-4);
+  background-color: var(--pink);
   right: 0;
   bottom: -50%;
   animation: aurora-border 6s ease-in-out infinite,
