--- a/src/components/Player/player.module.css
+++ b/src/components/Player/player.module.css
@@ -1,20 +1,25 @@
+:root {
+  --progressBarHeight: 4px;
+}
+
 .playerContainer {
   position: fixed;
   bottom: 0;
   min-height: 2rem;
   background: rgba(0, 0, 0, 0.8);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 2.25rem;
   justify-content: space-between;
   align-items: center;
   color: white;
-  width: 80%;
   margin-bottom: 20px;
   padding: 0.5rem 10px;
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 2s ease-out, transform 2s ease-out;
+  width: 90%;
+  max-width: 1366px;
 }
 
 .visible {
@@ -34,9 +39,10 @@
 
 .volumeControl {
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
   gap: 0.5rem;
-  width: 150px;
+  width: 320px;
 }
 
 .mediaContainer {
@@ -56,8 +62,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 6rem;
-  height: 6rem;
+  width: 96px;
+  height: 96px;
   overflow: hidden;
   border-radius: 0.375rem;
 }
@@ -68,6 +74,20 @@
 }
 .currentTrackName {
   font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 16rem;
+}
+.currentTrackArtists {
+  font-weight: 1em;
+  height: 2em;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 1em;
+  word-break: break-word;
 }
 
 .progressBarContainer {
@@ -76,12 +96,58 @@
   justify-content: center;
   gap: 1.25rem;
   width: 100%;
-  max-width: 50%;
 }
 
 .progressBar {
-  max-width: 80%;
-  background-color: #d1d5db;
+  appearance: none;
+  /* max-width: 80%; */
+  background: none;
+}
+.progressBar::-webkit-slider-runnable-track {
+  background-color: var(--yellow);
+  height: var(--progressBarHeight);
+  border-radius: 2px;
+}
+
+.progressBar::-moz-range-track {
+  background-color: var(--yellow);
+  height: var(--progressBarHeight);
+  border-radius: 2px;
+}
+
+.progressBar::-ms-track {
+  background-color: var(--yellow);
+  height: var(--progressBarHeight);
+  border-radius: 2px;
+}
+/* Thumb styling */
+.progressBar::-webkit-slider-thumb {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background-color: var(--orange);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
+  margin-top: -4px;
+}
+
+.progressBar::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background-color: var(--orange);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.progressBar::-ms-thumb {
+  width: 16px;
+  height: 16px;
+  background-color: var(--orange);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
 }
 
 .progressBarContainer input[type="range"] {
@@ -101,50 +167,53 @@
   display: flex;
   align-items: center;
   gap: 0.75rem;
+  margin-right: 10px;
 }
 
 .volumeBar {
   appearance: none;
   width: 100%;
-  height: 8px;
+  background: transparent;
   border-radius: 5px;
   outline: none;
   transition: background 0.3s ease;
+  max-width: 100px;
 }
 
 .volumeBar::-webkit-slider-runnable-track {
-  background-color: #fece02;
-  height: 8px;
+  background-color: var(--yellow);
+  height: var(--progressBarHeight);
   border-radius: 2px;
 }
 
 .volumeBar::-moz-range-track {
-  background-color: #fece02;
-  height: 8px;
+  background-color: var(--yellow);
+  height: var(--progressBarHeight);
   border-radius: 2px;
 }
 
 .volumeBar::-ms-track {
-  background-color: #fece02;
-  height: 8px;
+  background-color: var(--yellow);
+  height: var(--progressBarHeight);
   border-radius: 2px;
 }
+
 /* Thumb styling */
 .volumeBar::-webkit-slider-thumb {
   appearance: none;
   width: 16px;
   height: 16px;
-  background-color: #fe8802;
+  background-color: var(--orange);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
-  margin-top: -4px; /* Center thumb on track */
+  margin-top: -4px;
 }
 
 .volumeBar::-moz-range-thumb {
   width: 16px;
   height: 16px;
-  background-color: #fe8802;
+  background-color: var(--orange);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -153,36 +222,59 @@
 .volumeBar::-ms-thumb {
   width: 16px;
   height: 16px;
-  background-color: #fe8802;
+  background-color: var(--orange);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
 }
 
+.placeholder {
+  height: 40px;
+}
+
 .playIcon {
   border: none;
   background: none;
-  fill: #fece02;
-  color: #fece02;
-  min-height: 40px;
+  fill: var(--yellow);
+  color: var(--yellow);
+  height: 40px;
 }
 
 .volumeIcon {
   border: none;
   background: none;
-  fill: #fece02;
-  color: #fece02;
+  fill: var(--yellow);
+  color: var(--yellow);
   transform: translateY(2px);
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 1023px) {
   .playerContainer {
+    flex-direction: column;
+    gap: 1rem;
+    background: rgba(0, 0, 0, 0.95);
+  }
+  .playerControls {
     flex-direction: row;
   }
+  .currentTrack {
+    align-self: flex-start;
+  }
   .currentTrackName {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     max-width: 16rem;
+  }
+  .currentTrackCover {
+    width: 70px;
+    height: 70px;
+  }
+  .volumeControl {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .playerContainer {
+    width: 100%;
+    margin-bottom: 0;
   }
 }
