--- a/src/components/Media/media.module.css
+++ b/src/components/Media/media.module.css
@@ -14,6 +14,18 @@ main div {
   grid-column-start: 1;
 }
 
+.content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: -1;
+  pointer-events: none;
+}
+
 .circle {
   /* width: 95vw;
   height: 95vh; */
