--- a/src/components/EpisodeSelector/slide.module.css
+++ b/src/components/EpisodeSelector/slide.module.css
@@ -3,7 +3,7 @@
   height: 500px;
   width: 260px;
   background-color: black;
-  border: 5px solid #fece02;
+  border: 5px solid var(--yellow);
   box-sizing: border-box;
   /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); */
 }
@@ -11,9 +11,9 @@
 .imageContainer {
   position: relative;
   width: 100%;
-  border-bottom: 5px solid #fece02;
+  border-bottom: 5px solid var(--yellow);
   height: 50%;
-  background-color: #fece02;
+  background-color: var(--yellow);
 }
 
 .image {
@@ -21,33 +21,70 @@
   height: 250px;
   position: absolute;
   left: 0;
-  border-bottom: 5px solid #fece02;
+  border-bottom: 5px solid var(--yellow);
 }
 
 .play {
-  color: #fece02;
+  opacity: 0;
   border: none;
   background: none;
+  appearance: none;
+  -webkit-transition: all 0.5s ease;
   transition: opacity 0.5s ease; /* Transition for fading in/out */
   position: absolute;
-  top: 45px;
-  left: 50%;
-  transform: translateX(-50%) translateX(-10px);
+  top: 15px;
+  left: 15px;
   cursor: pointer;
-  opacity: 0;
+  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.8));
+  scale: 0.7;
 }
 
-.play svg {
-  transition: fill 0.5s ease;
-}
-.play:hover svg {
-  fill: #fe8802;
+.play .triangle {
+  -webkit-transition: all 0.7s ease-in-out;
+  stroke-dasharray: 240;
+  stroke-dashoffset: 480;
+  stroke: var(--yellow);
+  transform: translateY(0);
 }
 
-.play svg path:first-of-type {
-  fill: black;
-  opacity: 0.8;
+.play .circle {
+  stroke: var(--yellow);
+  stroke-dasharray: 650;
+  stroke-dashoffset: 650;
+  -webkit-transition: all 0.5s ease-in-out;
+  opacity: 0.3;
 }
+
+.play:hover .triangle {
+  stroke-dashoffset: 0;
+  opacity: 1;
+  stroke: var(--yellow);
+  animation: nudge 0.7s ease-in-out;
+
+  @keyframes nudge {
+    0% {
+      transform: translateX(0);
+    }
+    30% {
+      transform: translateX(-5px);
+    }
+    50% {
+      transform: translateX(5px);
+    }
+    70% {
+      transform: translateX(-2px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+}
+
+.play:hover .circle {
+  stroke-dashoffset: 0;
+  opacity: 1;
+}
+
 :global(.swiper-slide) {
   filter: blur(1px);
 }
@@ -97,7 +134,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 5px solid #fece02;
+  border: 5px solid var(--yellow);
   border-right: none;
   border-bottom: none;
   padding: 10px 20px;
