--- a/src/components/Player/player.module.css
+++ b/src/components/Player/player.module.css
@@ -64,6 +64,7 @@
   justify-content: center;
   width: 96px;
   height: 96px;
+  min-width: 96px;
   overflow: hidden;
   border-radius: 0.375rem;
 }
@@ -272,6 +273,7 @@
   .currentTrackCover {
     width: 70px;
     height: 70px;
+    min-width: 70px;
   }
   .volumeControl {
     display: none;
