--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -21,11 +21,12 @@
 
 .scrollDown {
   padding: 20px;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #888;
   text-align: center;
   cursor: pointer;
   animation: bounce 2s infinite;
+  color: white;
 }
 
 .scrollDown svg {
