--- a/src/components/Media/media.module.css
+++ b/src/components/Media/media.module.css
@@ -73,6 +73,7 @@ main div {
 
 .carousel {
   height: 700px;
+  width: 100vw;
 }
 
 .about h1 {
@@ -140,6 +141,20 @@ main div {
 
   .about h3 {
     font-size: 1.5rem;
+    padding-top: 2rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .about {
+    padding: 3rem;
+  }
+  .about h1 {
+    font-size: 1.2rem;
+  }
+
+  .about h3 {
+    font-size: 1.2rem;
     padding-top: 2rem;
   }
 }
