--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -21,7 +21,7 @@
 
 .scrollDown {
   padding: 20px;
-  font-size: 2rem;
+  font-size: 3rem;
   color: #888;
   text-align: center;
   cursor: pointer;
@@ -56,7 +56,7 @@
   padding: 0 20px;
 }
 
-.aurora {
+.blob {
   position: absolute;
   top: 0;
   left: 0;
@@ -67,24 +67,24 @@
   pointer-events: none;
 }
 
-.aurora__item {
+.blobCorner {
   overflow: hidden;
   position: absolute;
   width: 60vw;
   height: 60vw;
   background-color: var(--yellow);
   border-radius: 37% 29% 27% 27% / 28% 25% 41% 37%;
-  filter: blur(0.5);
+  filter: blur(10px);
   mix-blend-mode: overlay;
 }
 
-.aurora__item:nth-of-type(1) {
+.blobCorner:nth-of-type(1) {
   top: -50%;
   animation: aurora-border 6s ease-in-out infinite,
     aurora-1 12s ease-in-out infinite alternate;
 }
 
-.aurora__item:nth-of-type(2) {
+.blobCorner:nth-of-type(2) {
   background-color: var(--orange);
   right: 0;
   top: 0;
@@ -92,7 +92,7 @@
     aurora-2 12s ease-in-out infinite alternate;
 }
 
-.aurora__item:nth-of-type(3) {
+.blobCorner:nth-of-type(3) {
   background-color: var(--blue);
   left: 0;
   bottom: 0;
@@ -100,7 +100,7 @@
     aurora-3 8s ease-in-out infinite alternate;
 }
 
-.aurora__item:nth-of-type(4) {
+.blobCorner:nth-of-type(4) {
   background-color: var(--pink);
   right: 0;
   bottom: -50%;
@@ -222,5 +222,8 @@
   .logo {
     width: 75px;
     height: 75px;
+  }
+  .scrollDown {
+    font-size: 2rem;
   }
 }
