--- a/src/components/Hero/animatedpath.module.css
+++ b/src/components/Hero/animatedpath.module.css
@@ -30,6 +30,13 @@
 }
 
 @media only screen and (max-width: 767px) {
+  .blob path {
+    scale: 1.1;
+    transform: translateY(-30px);
+  }
+}
+
+@media only screen and (max-width: 767px) {
   .blob {
     height: 100%;
     scale: 1.5;
