--- a/src/components/EpisodeSelector/slide.module.css
+++ b/src/components/EpisodeSelector/slide.module.css
@@ -1,7 +1,7 @@
 .card {
   position: relative;
   height: 500px;
-  width: 260px;
+  max-width: 260px;
   background-color: black;
   border: 5px solid var(--yellow);
   box-sizing: border-box;
