--- a/src/components/Player/player.module.css
+++ b/src/components/Player/player.module.css
@@ -137,6 +137,7 @@
   width: 16px;
   height: 16px;
   background-color: var(--orange);
+  border-color: color-mix(in srgb, var(--orange) 95%, black 5%);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -147,6 +148,7 @@
   width: 16px;
   height: 16px;
   background-color: var(--orange);
+  border-color: color-mix(in srgb, var(--orange) 95%, black 5%);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -156,6 +158,7 @@
   width: 16px;
   height: 16px;
   background-color: var(--orange);
+  border-color: color-mix(in srgb, var(--orange) 95%, black 5%);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -215,6 +218,7 @@
   width: 16px;
   height: 16px;
   background-color: var(--orange);
+  border-color: color-mix(in srgb, var(--orange) 95%, black 5%);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -225,6 +229,7 @@
   width: 16px;
   height: 16px;
   background-color: var(--orange);
+  border-color: color-mix(in srgb, var(--orange) 95%, black 5%);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -234,9 +239,18 @@
   width: 16px;
   height: 16px;
   background-color: var(--orange);
+  border-color: color-mix(in srgb, var(--orange) 95%, black 5%);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
+}
+
+/* Chrome-specific styles */
+@supports (-webkit-appearance: none) and (not (-moz-appearance: none)) {
+  .volumeBar::-webkit-slider-thumb,
+  .progressBar::-webkit-slider-thumb {
+    transform: translateY(-2px);
+  }
 }
 
 .placeholder {
@@ -305,7 +319,14 @@
     margin-bottom: 0;
   }
   .playerControls {
-    max-width: 90%;
+    max-width: 95%;
+    transform: translateX(-2%);
+  }
+  .playIcon {
+    transform: scale(1.2);
+  }
+  .currentTrack {
+    margin-left: 10px;
   }
   .progressBarContainer span {
     display: none;
