Added EP 101, service worker fixes

--- a/src/components/EpisodeSelector/swiper.module.css
+++ b/src/components/EpisodeSelector/swiper.module.css
@@ -4,6 +4,10 @@
   margin: 0 auto;
 }
 
+.spiwer {
+  transform: translateX(-10px);
+}
+
 .carouselContainer {
   opacity: 0;
   transition: opacity 3s ease, transform 3s ease;
