--- a/src/components/Hero/animatedpath.module.css
+++ b/src/components/Hero/animatedpath.module.css
@@ -1,6 +1,12 @@
 :root {
-  --startColor: hsl(0, 100%, 75%);
-  --stopColor: hsl(0, 100%, 75%);
+  --hue: 0;
+  --startColor: hsl(var(--hue), 100%, 75%);
+  --stopColor: hsl(calc(var(--hue) + 60), 100%, 75%);
+  --bgColor: hsl(calc(var(--hue) + 60), 75%, 10%);
+}
+
+:global(body) {
+  background: var(--bgColor);
 }
 
 .container {
