--- a/src/components/Player/player.module.css
+++ b/src/components/Player/player.module.css
@@ -23,13 +23,9 @@
     rgba(15, 15, 15, 0.95)
   );
   border-top: 1px solid rgba(255, 255, 255, 0.06);
-  box-shadow:
-    0 4px 15px rgba(0, 0, 0, 0.6),
-    0 0 20px rgba(255, 255, 255, 0.03);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6), 0 0 20px rgba(255, 255, 255, 0.03);
   backdrop-filter: blur(6px);
-  transition:
-    opacity 2s ease-out,
-    transform 2s ease-out;
+  transition: opacity 2s ease-out, transform 2s ease-out;
 }
 
 .visible {
@@ -112,6 +108,7 @@
   justify-content: center;
   gap: 1.25rem;
   width: 100%;
+  padding-right: 10px;
 }
 .progressBarContainer span {
   width: 75px;
@@ -176,14 +173,11 @@
 .progressBarContainer input[type="range"] {
   flex-grow: 1;
   --range-progress: 0%;
-  /* ... */
 }
 
 .progressBarContainer input[type="range"]::before {
-  /* ... */
   background: #f50;
   width: var(--range-progress);
-  /* ... */
 }
 
 .volumeContainer {
@@ -359,6 +353,7 @@
   .playerContainer {
     width: 100%;
     margin-bottom: 0;
+    padding-right: 0;
   }
   .playerControls {
     max-width: 95%;
