--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -84,123 +84,110 @@
   border-radius: 37% 29% 27% 27% / 28% 25% 41% 37%;
   filter: blur(10px);
   mix-blend-mode: overlay;
+  will-change: transform;
+  contain: layout style;
 }
 
 .blobCorner:nth-of-type(1) {
   top: -50%;
+  left: 0;
   animation: aurora-border 6s ease-in-out infinite,
     aurora-1 12s ease-in-out infinite alternate;
 }
 
 .blobCorner:nth-of-type(2) {
   background-color: var(--orange);
-  right: 0;
   top: 0;
+  right: 0;
   animation: aurora-border 6s ease-in-out infinite,
     aurora-2 12s ease-in-out infinite alternate;
 }
 
 .blobCorner:nth-of-type(3) {
   background-color: var(--blue);
-  left: 0;
   bottom: 0;
+  left: 0;
   animation: aurora-border 6s ease-in-out infinite,
     aurora-3 8s ease-in-out infinite alternate;
 }
 
 .blobCorner:nth-of-type(4) {
   background-color: var(--pink);
-  right: 0;
   bottom: -50%;
+  right: 0;
   animation: aurora-border 6s ease-in-out infinite,
     aurora-4 24s ease-in-out infinite alternate;
 }
 
 @keyframes aurora-1 {
   0% {
-    top: 0;
-    right: 0;
+    transform: translate(0, 0);
   }
 
   50% {
-    top: 100%;
-    right: 75%;
+    transform: translate(-75vw, 8vw);
   }
 
   75% {
-    top: 100%;
-    right: 25%;
+    transform: translate(-25vw, 8vw);
   }
 
   100% {
-    top: 0;
-    right: 0;
+    transform: translate(0, 0);
   }
 }
 
 @keyframes aurora-2 {
   0% {
-    top: -50%;
-    left: 0%;
+    transform: translate(0, 0);
   }
 
   60% {
-    top: 100%;
-    left: 75%;
+    transform: translate(75vw, 10vw);
   }
 
   85% {
-    top: 100%;
-    left: 25%;
+    transform: translate(25vw, 10vw);
   }
 
   100% {
-    top: -50%;
-    left: 0%;
+    transform: translate(0, 0);
   }
 }
 
 @keyframes aurora-3 {
   0% {
-    bottom: 0;
-    left: 0;
+    transform: translate(0, 0);
   }
 
   40% {
-    bottom: 100%;
-    left: 75%;
+    transform: translate(75vw, -8vw);
   }
 
   65% {
-    bottom: 40%;
-    left: 50%;
+    transform: translate(50vw, -4vw);
   }
 
   100% {
-    bottom: 0;
-    left: 0;
+    transform: translate(0, 0);
   }
 }
 
 @keyframes aurora-4 {
   0% {
-    bottom: -50%;
-    right: 0;
+    transform: translate(0, 0);
   }
 
   50% {
-    bottom: 0%;
-    right: 40%;
+    transform: translate(-40vw, 4vw);
   }
 
   90% {
-    bottom: 50%;
-    right: 25%;
+    transform: translate(-25vw, 8vw);
   }
 
   100% {
-    bottom: -50%;
-    right: 0;
+    transform: translate(0, 0);
   }
 }
 
